# FLattice_PBH

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  NInf_ParameterRegionResearch.nb  README.md  SUGRAPotential_Analytical_Solve.nb  main.cpp
html/: annotated.html  calculation_8cpp.html  calculation_8cpp__incl.map  calculation_8cpp__incl.md5  calculation_8hpp.html  calculation_8hpp__dep__incl.map  calculation_8hpp__dep__incl.md5  calculation_8hpp__incl.map  calculation_8hpp_source.html  class_energy-members.html  class_energy.html  class_field-members.html  class_field.html  class_leap_frog-members.html  class_leap_frog.html  class_n_r_mat-members.html  class_n_r_mat.html  class_n_r_mat3d-members.html  class_n_r_mat3d.html  class_n_r_vec-members.html  class_n_r_vec.html  class_perturbation-members.html  class_perturbation.html  class_zeromode-members.html  class_zeromode.html  classarithcode-members.html  classarithcode.html  classarithcode__coll__graph.map  classes.html  classhuffcode-members.html  classhuffcode.html  classhuffcode__coll__graph.map  classnlohmann_1_1basic__json-members.html  classnlohmann_1_1basic__json.html  classnlohmann_1_1basic__json_a011397134847f36db0ed7d7a93753677_cgraph.map  classnlohmann_1_1basic__json_a011397134847f36db0ed7d7a93753677_cgraph.md5  classnlohmann_1_1basic__json_a0136728f5db69d4051c77b94307abd6c_cgraph.map  classnlohmann_1_1basic__json_a0136728f5db69d4051c77b94307abd6c_icgraph.map  classnlohmann_1_1basic__json_a068a16e76be178e83da6a192916923ed_cgraph.map  classnlohmann_1_1basic__json_a068a16e76be178e83da6a192916923ed_cgraph.md5  (+874 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_10.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_b.js  classes_d.js  defines_0.js  files_0.js  files_1.js  files_3.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_10.js  (+16 more)
include/: calculation.hpp  equations.hpp  evolution.hpp  field.hpp  json.hpp  nr.h  nrtypes_nr.h  nrutil_nr.h  parameter.hpp  parameters.hpp  parameters.json  uc.hpp  utilities.hpp
include/lattice_include/: calculation.hpp  field.hpp  lattice.hpp  lattice_calc.hpp  lattice_evol.hpp  lattice_field.hpp  lattice_initialize.hpp  latticeparameters.hpp  utilities.hpp
latex/: annotated.tex  calculation_8cpp.tex  calculation_8hpp.tex  calculation_8hpp__incl.md5  calculation_8hpp_source.tex  class_energy.tex  class_field.tex  class_leap_frog.tex  class_n_r_mat.tex  class_n_r_mat3d.tex  class_n_r_vec.tex  class_perturbation.tex  class_zeromode.tex  classarithcode.tex  classarithcode__coll__graph.md5  classhuffcode.tex  classhuffcode__coll__graph.md5  classnlohmann_1_1basic__json.tex  classnlohmann_1_1basic__json_a0136728f5db69d4051c77b94307abd6c_cgraph.md5  classnlohmann_1_1basic__json_a0136728f5db69d4051c77b94307abd6c_icgraph.md5  classnlohmann_1_1basic__json_a02ede1bab3adc87939a9300a43300480_cgraph.md5  classnlohmann_1_1basic__json_a0a45fc740637123fdf05fef970f8be47_cgraph.md5  classnlohmann_1_1basic__json_a0ff28dac23f2bdecee9564d07f51dcdc_icgraph.md5  classnlohmann_1_1basic__json_a13e032a02a7fd8a93fdddc2fcbc4763c_icgraph.md5  classnlohmann_1_1basic__json_a1be31ef2d2934d37a818083a4af44f99_cgraph.md5  classnlohmann_1_1basic__json_a1c15707055088cd5436ae91db72cbe67_cgraph.md5  classnlohmann_1_1basic__json_a1cfa9ae5e7c2434cab4cfe69bffffe11_cgraph.md5  classnlohmann_1_1basic__json_a1e0769d22d54573f294da0e5c6abc9de_icgraph.md5  classnlohmann_1_1basic__json_a1ecce113ff11dd294689ee4d45cbb855_cgraph.md5  classnlohmann_1_1basic__json_a1ef93e2006dbe52667294f5ef38b0b10_cgraph.md5  classnlohmann_1_1basic__json_a233b02b0839ef798942dd46157cc0fe6_cgraph.md5  classnlohmann_1_1basic__json_a25256d2f9accef4b527a2702b8ddecef_cgraph.md5  classnlohmann_1_1basic__json_a25e27ad0c6d53c01871c5485e1f75b96_icgraph.md5  classnlohmann_1_1basic__json_a2b2d781d7f2a4ee41bc0016e931cadf7_icgraph.md5  classnlohmann_1_1basic__json_a2b9852390abb4b1ef5fac6984e2fc0f3_cgraph.md5  classnlohmann_1_1basic__json_a2b9852390abb4b1ef5fac6984e2fc0f3_icgraph.md5  classnlohmann_1_1basic__json_a30a7cc24f2931c20ecae37ec4a5e901f_cgraph.md5  classnlohmann_1_1basic__json_a33b4bf898b857c962e798fc7f6e86e70_icgraph.md5  classnlohmann_1_1basic__json_a3acba9c6ceb7214e565fe08c3ba5b352_cgraph.md5  classnlohmann_1_1basic__json_a4336103c941d9f60bd51320f4880e3dd_cgraph.md5  (+256 more)
lib/: calculation.cpp  calulation.cpp  evolution.cpp  field.cpp  parameter.cpp  utilities.cpp
src/: calculation.cpp  equations.cpp  nr.cpp  parameters.cpp  uc.cpp  utilities.cpp
src/lattice_src/: calculation.cpp  evolution.cpp  lattice.cpp  lattice_calc.cpp  lattice_evol.cpp  lattice_field.cpp  lattice_initialize.cpp  latticeparameters.cpp  utilities.cpp
